--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "8.4.4",
-    "@redwoodjs/project-config": "8.4.4"
+    "@redwoodjs/core": "8.5.0",
+    "@redwoodjs/project-config": "8.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "^4.0.0",
+    "tailwindcss-cli": "^0.1.2"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
@@ -23,5 +28,18 @@
   "packageManager": "yarn@4.6.0",
   "resolutions": {
     "@storybook/react-dom-shim@npm:7.6.17": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@mantine/carousel": "^7.16.2",
+    "@mantine/core": "^7.16.2",
+    "@mantine/hooks": "^7.16.2",
+    "@svgr/webpack": "^8.1.0",
+    "@tabler/icons": "^3.29.0",
+    "@tabler/icons-react": "^3.29.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "embla-carousel-react": "^7.1.0",
+    "react-countdown": "^2.3.6"
   }
 }
