--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
     "@mantine/carousel": "^7.16.2",
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
+    "@mantine/notifications": "^7.16.2",
     "@svgr/webpack": "^8.1.0",
     "@tabler/icons": "^3.29.0",
     "@tabler/icons-react": "^3.29.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "embla-carousel-react": "^7.1.0",
-    "react-countdown": "^2.3.6"
+    "jsonwebtoken": "^9.0.2",
+    "react-countdown": "^2.3.6",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
+    "react-router-dom": "^7.1.3"
   }
 }
