--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@redwoodjs/core": "8.5.0",
     "@redwoodjs/project-config": "8.5.0",
+    "@types/node": "^22.13.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "prettier-plugin-tailwindcss": "^0.5.12",
